gen/sap/commerce/toolset/flexibleSearch/FlexibleSearchParser.java
/*
 * This file is part of "SAP Commerce Developers Toolset" plugin for IntelliJ IDEA.
 * Copyright (C) 2019-2025 EPAM Systems <hybrisideaplugin@epam.com> and contributors
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

/*
 * ----------------------------------------------------------------
 * --- WARNING: THIS FILE IS GENERATED AND WILL BE OVERWRITTEN! ---
 * ----------------------------------------------------------------
 */
package sap.commerce.toolset.flexibleSearch;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static sap.commerce.toolset.flexibleSearch.psi.FlexibleSearchTypes.*;
import static sap.commerce.toolset.flexibleSearch.FlexibleSearchParserUtils.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class FlexibleSearchParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(FROM_CLAUSE_EXPR, FROM_CLAUSE_SELECT, Y_FROM_CLAUSE),
    create_token_set_(AND_EXPRESSION, BETWEEN_EXPRESSION, BIT_EXPRESSION, CASE_EXPRESSION,
      CAST_EXPRESSION, COLUMN_REF_EXPRESSION, COLUMN_REF_Y_EXPRESSION, COMPARISON_EXPRESSION,
      CONCAT_EXPRESSION, EQUIVALENCE_EXPRESSION, EXISTS_EXPRESSION, EXPRESSION,
      FUNCTION_CALL_EXPRESSION, IN_EXPRESSION, ISNULL_EXPRESSION, LIKE_EXPRESSION,
      LITERAL_EXPRESSION, MUL_EXPRESSION, MYSQL_FUNCTION_EXPRESSION, OR_EXPRESSION,
      PAREN_EXPRESSION, SUBQUERY_PAREN_EXPRESSION, UNARY_EXPRESSION),
  };

  /* ********************************************************** */
  // selected_table_name column_separator column_name
  static boolean aliased_column_ref_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliased_column_ref_expression")) return false;
    if (!nextTokenIs(b, "", BACKTICK_LITERAL, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = selected_table_name(b, l + 1);
    r = r && column_separator(b, l + 1);
    p = r; // pin = 2
    r = r && column_name(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // NUMBERED_PARAMETER | (NAMED_PARAMETER ( '.' ext_parameter_name)*)
  public static boolean bind_parameter(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bind_parameter")) return false;
    if (!nextTokenIs(b, "<bind parameter>", NAMED_PARAMETER, NUMBERED_PARAMETER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BIND_PARAMETER, "<bind parameter>");
    r = consumeToken(b, NUMBERED_PARAMETER);
    if (!r) r = bind_parameter_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // NAMED_PARAMETER ( '.' ext_parameter_name)*
  private static boolean bind_parameter_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bind_parameter_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NAMED_PARAMETER);
    r = r && bind_parameter_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( '.' ext_parameter_name)*
  private static boolean bind_parameter_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bind_parameter_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!bind_parameter_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bind_parameter_1_1", c)) break;
    }
    return true;
  }

  // '.' ext_parameter_name
  private static boolean bind_parameter_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bind_parameter_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && ext_parameter_name(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // name
  public static boolean column_alias_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_alias_name")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLUMN_ALIAS_NAME, "<column alias name>");
    r = name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean column_localized_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_localized_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, COLUMN_LOCALIZED_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // ORDER | IDENTIFIER
  public static boolean column_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_name")) return false;
    if (!nextTokenIs(b, "<column name>", IDENTIFIER, ORDER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLUMN_NAME, "<column name>");
    r = consumeToken(b, ORDER);
    if (!r) r = consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // OUTER_JOIN
  public static boolean column_outer_join_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_outer_join_name")) return false;
    if (!nextTokenIs(b, OUTER_JOIN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OUTER_JOIN);
    exit_section_(b, m, COLUMN_OUTER_JOIN_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // (selected_table_name column_separator)? y_column_name y_column_localized_name? column_outer_join_name?
  static boolean column_ref_y_expression_other(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_ref_y_expression_other")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = column_ref_y_expression_other_0(b, l + 1);
    r = r && y_column_name(b, l + 1);
    r = r && column_ref_y_expression_other_2(b, l + 1);
    r = r && column_ref_y_expression_other_3(b, l + 1);
    exit_section_(b, l, m, r, false, FlexibleSearchParser::column_ref_y_expression_recover);
    return r;
  }

  // (selected_table_name column_separator)?
  private static boolean column_ref_y_expression_other_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_ref_y_expression_other_0")) return false;
    column_ref_y_expression_other_0_0(b, l + 1);
    return true;
  }

  // selected_table_name column_separator
  private static boolean column_ref_y_expression_other_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_ref_y_expression_other_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = selected_table_name(b, l + 1);
    r = r && column_separator(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // y_column_localized_name?
  private static boolean column_ref_y_expression_other_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_ref_y_expression_other_2")) return false;
    y_column_localized_name(b, l + 1);
    return true;
  }

  // column_outer_join_name?
  private static boolean column_ref_y_expression_other_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_ref_y_expression_other_3")) return false;
    column_outer_join_name(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // !'}'
  static boolean column_ref_y_expression_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_ref_y_expression_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // DOT | COLON
  public static boolean column_separator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_separator")) return false;
    if (!nextTokenIs(b, "<column separator>", COLON, DOT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLUMN_SEPARATOR, "<column separator>");
    r = consumeToken(b, DOT);
    if (!r) r = consumeToken(b, COLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // UNION ALL?
  public static boolean compound_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_operator")) return false;
    if (!nextTokenIs(b, UNION)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, UNION);
    r = r && compound_operator_1(b, l + 1);
    exit_section_(b, m, COMPOUND_OPERATOR, r);
    return r;
  }

  // ALL?
  private static boolean compound_operator_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_operator_1")) return false;
    consumeToken(b, ALL);
    return true;
  }

  /* ********************************************************** */
  // (ORDER | IDENTIFIER) ('!' | '*')?
  public static boolean defined_table_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defined_table_name")) return false;
    if (!nextTokenIs(b, "<defined table name>", IDENTIFIER, ORDER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFINED_TABLE_NAME, "<defined table name>");
    r = defined_table_name_0(b, l + 1);
    p = r; // pin = 1
    r = r && defined_table_name_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ORDER | IDENTIFIER
  private static boolean defined_table_name_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defined_table_name_0")) return false;
    boolean r;
    r = consumeToken(b, ORDER);
    if (!r) r = consumeToken(b, IDENTIFIER);
    return r;
  }

  // ('!' | '*')?
  private static boolean defined_table_name_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defined_table_name_1")) return false;
    defined_table_name_1_0(b, l + 1);
    return true;
  }

  // '!' | '*'
  private static boolean defined_table_name_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defined_table_name_1_0")) return false;
    boolean r;
    r = consumeToken(b, EXCLAMATION_MARK);
    if (!r) r = consumeToken(b, STAR);
    return r;
  }

  /* ********************************************************** */
  // EXISTS '('
  static boolean exists_expression_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exists_expression_name")) return false;
    if (!nextTokenIs(b, EXISTS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, EXISTS, LPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // bind_parameter (',' bind_parameter)* | expression ( ',' expression )* | from_clause_subqueries_statement
  static boolean expression_in_subquery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_in_subquery")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression_in_subquery_0(b, l + 1);
    if (!r) r = expression_in_subquery_1(b, l + 1);
    if (!r) r = from_clause_subqueries_statement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // bind_parameter (',' bind_parameter)*
  private static boolean expression_in_subquery_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_in_subquery_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = bind_parameter(b, l + 1);
    r = r && expression_in_subquery_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' bind_parameter)*
  private static boolean expression_in_subquery_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_in_subquery_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression_in_subquery_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_in_subquery_0_1", c)) break;
    }
    return true;
  }

  // ',' bind_parameter
  private static boolean expression_in_subquery_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_in_subquery_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && bind_parameter(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression ( ',' expression )*
  private static boolean expression_in_subquery_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_in_subquery_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1, -1);
    r = r && expression_in_subquery_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( ',' expression )*
  private static boolean expression_in_subquery_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_in_subquery_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression_in_subquery_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_in_subquery_1_1", c)) break;
    }
    return true;
  }

  // ',' expression
  private static boolean expression_in_subquery_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_in_subquery_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ORDER | IDENTIFIER
  public static boolean ext_parameter_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ext_parameter_name")) return false;
    if (!nextTokenIs(b, "<ext parameter name>", IDENTIFIER, ORDER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXT_PARAMETER_NAME, "<ext parameter name>");
    r = consumeToken(b, ORDER);
    if (!r) r = consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ',' result_column
  static boolean following_result_column(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "following_result_column")) return false;
    if (!nextTokenIs(b, COMMA)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && result_column(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // FROM from_clause_expr ( join_operator from_clause_expr )*
  public static boolean from_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause")) return false;
    if (!nextTokenIs(b, FROM)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FROM_CLAUSE, null);
    r = consumeToken(b, FROM);
    p = r; // pin = 1
    r = r && report_error_(b, from_clause_expr(b, l + 1));
    r = p && from_clause_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ( join_operator from_clause_expr )*
  private static boolean from_clause_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!from_clause_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "from_clause_2", c)) break;
    }
    return true;
  }

  // join_operator from_clause_expr
  private static boolean from_clause_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = join_operator(b, l + 1);
    r = r && from_clause_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // y_from_clause
  //   | from_clause_select
  public static boolean from_clause_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause_expr")) return false;
    if (!nextTokenIs(b, "<from clause expr>", LBRACE, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, FROM_CLAUSE_EXPR, "<from clause expr>");
    r = y_from_clause(b, l + 1);
    if (!r) r = from_clause_select(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ((from_clause_select_query ( ( AS )? table_alias_name)?) | from_clause_subqueries) join_constraint?
  public static boolean from_clause_select(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause_select")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = from_clause_select_0(b, l + 1);
    r = r && from_clause_select_1(b, l + 1);
    exit_section_(b, m, FROM_CLAUSE_SELECT, r);
    return r;
  }

  // (from_clause_select_query ( ( AS )? table_alias_name)?) | from_clause_subqueries
  private static boolean from_clause_select_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause_select_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = from_clause_select_0_0(b, l + 1);
    if (!r) r = from_clause_subqueries(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
